[package]
name = "revm-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0.90", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
alloy = { version = "0.7.3", features = ["full", "node-bindings", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "signer-aws", "signer-keystore", "signer-ledger", "signer-mnemonic", "signer-trezor", "signer-yubihsm", "rlp", "transports"] }
revm = { version = "19.4.0", features = ["alloydb", "dev"] }
anyhow = "1.0.94"
heck = "0.5.0"

revm-contract-types = { git = "https://github.com/aymantaybi/revm-contract-types" }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }

[lib]
proc-macro = true
